# GAMES-202-Homework

./: .gitignore  README.md
homework0/: index.html
homework0/src/loads/: loadOBJ.js
homework0/src/materials/: PhongMaterial.js
homework0/src/shaders/: InternalShader.js
homework1/src/: engine.js
homework1/src/lights/: DirectionalLight.js
homework1/src/renderers/: WebGLRenderer.js
homework1/src/shaders/phongShader/: phongFragment.glsl
homework1/src/shaders/shadowShader/: shadowFragment.glsl
homework2/: index.html
homework2/assets/cubemap/CornellBox/: transport.txt
homework2/assets/cubemap/CornellBox/Shadowed/: transport.txt
homework2/assets/cubemap/CornellBox/interreflection/: transport.txt
homework2/assets/cubemap/GraceCathedral/: transport.txt
homework2/assets/cubemap/Indoor/: transport.txt
homework2/src/: engine.js
homework2/src/loads/: loadOBJ.js
homework2/src/materials/: PRTMaterial.js
homework2/src/renderers/: MeshRender.js  WebGLRenderer.js
homework2/src/shaders/PRTShader/: PRTFragment.glsl  PRTVertex.glsl
homework2/src/utils/: tools.js
homework3/src/: engine.js
homework3/src/shaders/ssrShader/: ssrFragment.glsl
homework4/src/renderers/: WebGLRenderer.js
homework4/src/shaders/KullaContyShader/: KullaContyFragment.glsl
homework4/src/shaders/pbrShader/: PBRFragment.glsl
homework5/src/: denoiser.cpp  main.cpp
lut-gen/: CMakeLists.txt  Eavg_IS.cpp  Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp
prt/scenes/: prt.exr
prt/scenes/cubemap/Skybox/: transport.txt
prt/src/: prt.cpp
(+1 files in other folders)
